# visual_debugger

./: CMakeLists.txt  README.md  opengl_example.cpp  opengl_visual_debugger.cpp  shared_memory_client.cpp  shared_memory_server.cpp
src/opengl_window/: CMakeLists.txt  tiny_common_callbacks.h  tiny_common_graphics_app_interface.h  tiny_opengl3_app.cpp  tiny_opengl3_app.h  tiny_win32_opengl_window.cpp  tiny_win32_opengl_window.h  tiny_win32_window.cpp  tiny_window_interface.h  tiny_x11_opengl_window.cpp
src/opengl_window/example/: CMakeLists.txt
src/platform_utils/: CMakeLists.txt
src/shared_memory/: CMakeLists.txt  posix_shared_memory.cpp  posix_shared_memory.h  shared_memory_interface.h
